word break and horizontal overflow fixes

--- a/src/components/gym/problem/problem.css
+++ b/src/components/gym/problem/problem.css
@@ -37,6 +37,7 @@
     text-align: left;
     line-height: 1.618;
     font-size: large;
+    word-break: break-all;
 }
 .problem-container-meta{
     width: 35%;
